# tautulli-new-seasons-reminder

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  renovate.json
.github/workflows/: release.yml  renovate-dashboard-trigger.yml  renovate.yml  test.yml
scripts/: release.sh
src/new_seasons_reminder/: __init__.py  __main__.py  api.py  config.py  http.py  logic.py  main.py  models.py  templates.py
src/new_seasons_reminder/metadata/: __init__.py  base.py  resolver.py  tmdb.py  tvdb.py
src/new_seasons_reminder/providers/: __init__.py  base.py  generic.py  signal_cli.py
src/new_seasons_reminder/sources/: __init__.py  base.py  jellyfin.py  sonarr.py  tautulli.py
tests/: conftest.py  test_api.py  test_config.py  test_integration.py  test_logic.py  test_main.py  test_metadata.py  test_providers.py  test_sources.py
